--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ python:
   - "3.4"
   - "3.5"
 
-install: "pip install -r requirements.txt"
+install:
+  - apt-get install pylint
+  - pip install -r requirements.txt
 
 script:
   - py.test
+  - pylint codegolf
