once again added sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.5"
 
 install:
-  - apt-get install pylint
+  - sudo apt-get install pylint
   - pip install -r requirements.txt
 
 script:
