--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ python:
   - "3.4"
   - "3.5"
 
+before_install:
+  - sudo apt-get install -y pylint
+
 install:
-  - sudo apt-get install pylint
   - pip install -r requirements.txt
 
 script:
