Add slack notifications to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ install:
 script:
   - py.test
   - pylint codegolf || true
+
+notifications:
+  slack:
+    rooms:
+      - uqcs:V9gB7LhPmGARkyQZOpGEHza7#codegolf
