removed setup bash file and stopped email span.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - pylint codegolf || true
 
 notifications:
+  email: false
   slack:
     rooms:
       - uqcs:V9gB7LhPmGARkyQZOpGEHza7#codegolf
