--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ### Vagrant
 .vagrant/
 
+### Database
+codegolf.db
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
