--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,6 +40,8 @@ install:
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
 
+build: off
+
 test_script:
   # Run the project tests
   - "%CMD_IN_ENV% python tests\\test_codegolf.py"
