--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,8 @@ install:
   - "python --version"
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
 
-   Upgrade to the latest version of pip to avoid it displaying warnings
-   about it being out of date.
+#   Upgrade to the latest version of pip to avoid it displaying warnings
+#   about it being out of date.
   - "pip install --disable-pip-version-check --user --upgrade pip"
 
   # Install the build dependencies of the project. If some dependencies contain
