--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 ### Database
 codegolf.db
 
+### Config file
+codegolf/config.py
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
