--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 codegolf.db
 
 ### Config file
-codegolf/config.py
+settings.cfg
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
